--- a/web-party-equipment/web-party-equipment-war/web/index.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/index.xhtml
@@ -12,7 +12,7 @@
             <ui:define name="content">
                 <h:outputText value="Hello World"/><br/>
                 <c:forEach items="#{paysMB.pays}" var="pays">
-                    <h:outputText value="Pays n° #{pays.idPays}"/><br/>
+                    <h:outputText value="Pays n° #{pays.getLibelle(internationalizationMB.langueCourante)}"/><br/>
                 </c:forEach>
                     
             </ui:define>
