Panier MB addition

--- a/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
@@ -25,6 +25,9 @@
                     <h:link title="#{msg.goMainPage}" outcome="index.xhtml">
                         <h:outputText value="#{msg.welcomePage}"/>
                     </h:link>
+                    <h:link title="#{msg.goBasket}" outcome="panier.xhtml">
+                        <h:graphicImage value="resources/images/basket.png" height="30" title="#{msg.basket}"/>
+                    </h:link>
                     <h:outputText value="" />
                     <h:outputText value="" />
                     <h:outputText value="" />
