--- a/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
@@ -7,7 +7,7 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
     
-    <!--<f:view locale="#{internationalizationMB.locale}">-->
+    <f:view locale="#{internationalizationMB.locale}">
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet name="./css/default.css"/>
@@ -80,4 +80,5 @@
         </div>
 
     </h:body>
+    </f:view>
 </html>
