Jquery library addition

--- a/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
@@ -13,6 +13,7 @@
         <h:outputStylesheet name="./css/default.css"/>
         <h:outputStylesheet name="./css/cssLayout.css"/>
         <f:loadBundle basename="language.lang" var="msg"/>
+        <script type="text/javascript" src="js/jquery-1.11.3.min.js"/>
         <title>Party Equipment</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
     </h:head>
