--- a/web-party-equipment/web-party-equipment-war/web/article.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/article.xhtml
@@ -8,7 +8,7 @@
     <f:metadata>
         <f:viewParam name="articleID" value="#{articleMB.idArt}"/>
     </f:metadata>
-    <body>
+    <h:body>
         <ui:composition template="./MainTemplate.xhtml">
             <ui:define name="content">
                 <h1>
@@ -49,5 +49,5 @@
             </ui:define>
         </ui:composition>
 
-    </body>
+    </h:body>
 </html>
