--- a/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
@@ -67,7 +67,7 @@
             <div>
                 <div id="right">
                     <ui:insert name="right"></ui:insert>
-                    Promo
+                    <h:link value="#{msg.promotionsOfTheMoment}" outcome="promotions.xhtml"/> 
                 </div>
                 <div id="content" class="right_content">
                     <ui:insert name="content"></ui:insert>
