--- a/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
@@ -33,6 +33,21 @@
                     <h:outputText value="" />
                     <h:outputText value="" />
                     <h:outputText value="" />
+                    <c:choose>
+                        <c:when test="#{!clientMB.infosConnexion.connecte}">
+                            <h:link outcome="connect.xhtml">
+                                <h:outputText value="#{msg.connect}" />
+                            </h:link>
+                        </c:when>
+                        <c:when test="#{clientMB.infosConnexion.connecte}">
+                            <h:link outcome="#{clientMB.editerClient()}">
+                                <h:outputText value="#{clientMB.client.email}" />
+                            </h:link>
+                            <h:link value="#{clientMB.deconnexion()}">
+                                <h:outputText value="#{msg.deconnexion}"/>
+                            </h:link>
+                        </c:when>
+                    </c:choose>
                     <h:form>
                         <c:forEach items="#{internationalizationMB.langues}" var="langue">
                             <h:commandLink action="#{internationalizationMB.setLangueCourante(langue)}">
