--- a/web-party-equipment/web-party-equipment-war/web/inscriptionClient.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/inscriptionClient.xhtml
@@ -10,7 +10,7 @@
         <ui:composition template="./MainTemplate.xhtml">
             <ui:define name="content">
                 <c:if test="#{clientMB.infosConnexion.connecte}">
-                    <f:event listener="index.xhtml" 
+                    <f:event listener="#{clientMB.retourIndex()}" 
                              type="preRenderView"/>
                 </c:if>
                 <h1><h:outputText value="#{msg.inscription_title}"/></h1>
@@ -197,7 +197,8 @@
                          </h:selectOneMenu>
                     </div>
                     <p>
-                        <h:commandButton value="#{msg.boutonValider}" action="#{clientMB.inscription()}"/>
+                        <h:commandButton value="#{msg.boutonValider}"
+                                         action="#{clientMB.inscription2()}"/>
                     </p>
                 </h:form>
             </ui:define>
