--- a/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
@@ -11,7 +11,7 @@
         <h:head>
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
             <h:outputStylesheet name="./css/cssLayout.css"/>
-
+            <link rel="icon" type="image/png" href="./img/favicon.png" />
             <h:outputStylesheet name="./css/bootstrap.min.css"/>
             <f:loadBundle basename="language.lang" var="msg"/>
             <title>Party Equipment</title>
