Categorie Navigation Template on left

--- a/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
@@ -126,6 +126,7 @@
 
             <h:outputScript name="./js/jquery-1.11.3.min.js"/>
             <h:outputScript name="./js/bootstrap.min.js"/>
+            <h:outputScript name="./js/article.js"/>
         </h:body>
     </f:view>
 </html>
