--- a/web-party-equipment/web-party-equipment-war/web/index.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/index.xhtml
@@ -9,6 +9,9 @@
     <body>
 
         <ui:composition template="./MainTemplate.xhtml">
+            <ui:define name="left">
+                <ui:include src="categorieNav.xhtml"/>
+            </ui:define>
 
             <ui:define name="content">
                 <section id="promotions">
