--- a/web-party-equipment/web-party-equipment-war/web/inscriptionReussie.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/inscriptionReussie.xhtml
@@ -8,7 +8,7 @@
         <ui:composition template="./MainTemplate.xhtml">
             <ui:define name="content">
                 <h3 class="alone text-center text-info">
-                    <h:outputText value="#{clientMB.client.email} :
+                    <h:outputText value="#{clientMB.client.prenom} :
                                          #{msg.inscriptionReussie}"/>
                 </h3>
             </ui:define>
